analyzer for commit types halfway done

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,7 @@
+[files]
+csv_file = sonar_measures.csv 
+
 [paths]
-csv_dir = sonar_measures.csv 
 cloned_repositories_dir = /home/kristian/devops_repositories2
 refactoring_results_dir = /home/kristian/refactoringminer_results
+refactoring_type_results_dir = /home/kristian/refactoring_type_results
