changed results dir, refactoringminer exec as path, clone with range, better json output from analyzer

--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,8 @@
 csv_file = sonar_measures.csv 
 
 [paths]
-cloned_repositories_dir = /home/kristian/devops_repositories2
+cloned_repositories_dir = /home/kristian/devops_repositories3
 refactoring_results_dir = /home/kristian/refactoringminer_results
-refactoring_type_results_dir = /home/kristian/refactoring_type_results
+
+[executables]
+refactoring_miner_exec = RefactoringMiner
