--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ idna==3.10
 multidict==6.1.0
 numpy==2.1.1
 pandas==2.2.3
+PyDriller==2.7
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
